<resources>
    <string name="app_name">Weather</string>

    <!-- for button -->
    <string name="buttonToday">Today</string>
    <string name="buttonTomorrow">Tomorrow</string>
    <string name="buttonFiveDays">5 days</string>
    <string name="button_more_details">in details</string>
    <string name="button_confirm">confirm</string>
    <string name="confirm_entry">confirm entry</string>
    <!-- for types of sky -->
    <string name="cloudy">Cloudy</string>

    <!-- for location and name city -->
    <string name="select_location">Select or enter a location</string>
    <string name="edit_location">Enter your location</string>
    <string name="select_place">Select place</string>

    <string name="saint_petersburg">Saint Petersburg</string>
    <string name="moscow">Moscow</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="rom">Rom</string>
    <string name="athens">Athens</string>
    <string name="barcelona">Barcelona</string>

    <!-- for name setting -->
    <string name="theme">Theme</string>
    <string name="setting">Setting</string>
    <string name="dark">dark</string>
    <string name="light">light</string>
    <string name="russian">Russian</string>
    <string name="metric_system">Metric system</string>

    <string name="wind_speed">wind_speed</string>
    <string name="ms">m/s</string>
    <string name="kn">kn</string>

    <string name="temperature"> temperature </string>
    <string name="celsius" translatable="false"> &#8451; </string>
    <string name="fahrenheit" translatable="false"> &#8457; </string>
    <string name="feels">"Feels like: "</string>


    <!-- for toast -->
    <string name="toast_button_setting">The settings button is clicked</string>
    <string name="toast_button_place">The place selection button is pressed</string>
    <string name="toast_start">main activity start</string>
    <string name="toast_restoreInstanceState">restoreInstanceState</string>
    <string name="toast_resume">activity resume</string>
    <string name="toast_pause">activity pause</string>
    <string name="toast_restart">activity restart</string>
    <string name="toast_stop">activity stop</string>
    <string name="toast_destroy">activity destroy</string>
    <string name="toast_create">create started</string>
    <string name="toast_saveInstanceState">SaveInstanceState</string>
    <string name="toast_button_detail">button detail</string>
    <string name="toast_confirm">confirm</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <!-- Hint -->
    <string name="degrees">degrees</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home">Home</string>

    <string name="nav_header_title" translatable="false">AlexSPb</string>
    <string name="nav_header_subtitle" translatable="false">3416216@gmail.com</string>
    <string name="search">Search</string>

    <string name="attention">Attention!</string>
    <string name="accepted">accepted</string>
    <string name="place">place</string>
    <string name="enter_place">Enter place</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="history">History</string>
    <string name="make_network_on">Make your network ON</string>
    <string name="low_battery">Low battery</string>

    <string name="map">Map</string>
    <string name="title_activity_maps">Maps</string>
    <string name="latitude">Lat</string>
    <string name="longitude">Long</string>
    <string name="sign_out">Sign out</string>

</resources>