<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSetting"
        android:layout_width="@dimen/height155"
        android:layout_height="@dimen/height30"
        android:layout_marginStart="@dimen/margin190"
        android:layout_marginTop="@dimen/margin5"
        android:text="@string/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:text="@string/theme"
        android:textOff="@string/dark"
        android:textOn="@string/light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetting" />

    <Switch
        android:id="@+id/switch_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:layout_marginTop="@dimen/margin12"
        android:text="@string/temperature"
        android:textOff="@string/celsius"
        android:textOn="@string/fahrenheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_theme" />

    <Switch
        android:id="@+id/switch_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:layout_marginTop="@dimen/margin12"
        android:text="@string/wind_speed"
        android:textOff="@string/ms"
        android:textOn="@string/kn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_temperature" />


</androidx.constraintlayout.widget.ConstraintLayout>