<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyHomeworkTropics">

    <TextView
        android:id="@+id/textViewSetting"
        android:layout_width="@dimen/height155"
        android:layout_height="@dimen/height30"
        android:layout_marginTop="@dimen/margin60"
        android:text="@string/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:layout_marginEnd="@dimen/margin60"
        android:text="@string/theme"
        android:showText="true"
        android:textOff="@string/dark"
        android:textOn="@string/light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetting"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:layout_marginEnd="@dimen/margin60"
        android:layout_marginTop="@dimen/margin12"
        android:text="@string/metric_system"
        android:showText="true"
        android:textOff="@string/celsius"
        android:textOn="@string/fahrenheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_theme"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_wind_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:layout_marginEnd="@dimen/margin60"
        android:layout_marginTop="@dimen/margin12"
        android:text="@string/russian"
        android:showText="true"
        android:textOff="@string/ms"
        android:textOn="@string/kn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_temperature"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>